JG-2001-10-22-0: Fixed a memory access error in the cull hash implementation

EB-2001-10-20-0: Added 'const' in libraries

JG-2001-10-18-0: Execd:
                  - bugfix: reporting of a parallel array jobs pe task in
                            tight integration could.
                  - use cull hashing iterators for searches in job list          

JG-2001-10-17-0: (Issue #57)
                 Sparc Linux port (32 bit). Grid Engine platform slinux.
                 The port is restricted to SGE as the pdc module had to be 
                 disabled for slinux (aimk variable COMPILE_DC).

JG-2001-10-16-0: Implemented the use of hash tables for cull lists.
                 The list definition (libs/gdi/sge_*L.h) contains information, 
                 for which data fields hash tables shall be generated.
                 Hash tables are created and maintained by the cull list 
                 access functions (lCreateList, lAppendElem etc.) and are used
                 by the cull search functions (lGetElem*).
                 Defined default hash tables for the most used cull lists.
                 Increased the GDI version - the spooling file format and
                 the message format changed.

EB-2001-10-11-1: Changed MAX_SEQNUM from 999,999 to 9,999,999.
                 - changed qstat output format

EB-2001-10-11-0: Changed spool behaviour for (array) jobs
                 - beared down the 32765 subdirectory limit
                 - added some tuning parameters for job spooling
                 - collected duplicated code used in master and execd 

CR-2001-10-10-1: Testsuite:
                 - closed issue # 9 (Create a new test for file parsing)

CR-2001-10-10-0: Testsuite:
                 - new command line option: mfile FILE
                   (don't mail messages, write it to file)
                 - new optional parameter for procedure "wait_for_jobstart"
                   (do a qconf -tsm before waiting for jobstart) 
